fixed shift of pink waves

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 .topDiv {
   background-color: #b0c4b1;
   color: white;
@@ -142,7 +147,7 @@
   height: 350px;
   width: 320px;
   background-color: #e1e2e3;
-  opacity: 0.8;
+  opacity: 80%;
   color: black;
   z-index: 220;
 }
@@ -153,7 +158,7 @@
   height: 350px;
   width: 320px;
   background-color: #e1e2e3;
-  opacity: 0.8;
+  opacity: 80%;
   color: black;
   z-index: 220;
 }
@@ -272,7 +277,7 @@
 
 .pinkLoginDiv {
   background-color: #f7e1d7;
-  height: 370px;
+  height: 350px;
   position: relative;
   bottom: -80px;
   width: 2000px;
@@ -340,7 +345,7 @@ a.social:hover {
   color: rgb(248, 229, 220);
 }
 
-#container {
+#container-MyPageCards {
   display: flex;
 }
 
